[gd_scene load_steps=7 format=3 uid="uid://e5ov4fi6r62o"]

[ext_resource type="Script" path="res://Main.gd" id="1_ahq7g"]
[ext_resource type="PackedScene" uid="uid://brnug5l1ach0o" path="res://mob.tscn" id="2_gxtv4"]
[ext_resource type="PackedScene" uid="uid://qbv86vfie0pc" path="res://player.tscn" id="3_1pnwc"]
[ext_resource type="Texture2D" uid="uid://bheg5mtq1v5ej" path="res://art/clouds.jpg" id="3_hmay3"]
[ext_resource type="PackedScene" uid="uid://bwd0a746rxdlb" path="res://hud.tscn" id="4_odusq"]

[sub_resource type="Curve2D" id="Curve2D_2q3lf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_ahq7g")
mob_scene = ExtResource("2_gxtv4")

[node name="ColorRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hmay3")
expand_mode = 1

[node name="Player" parent="." instance=ExtResource("3_1pnwc")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_2q3lf")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_odusq")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
